@@ -1,3 +1,9 @@
+2011-01-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR pch/47430
+	* c-opts.c (c_common_post_options): Call c_common_no_more_pch
+	after init_c_lex if pch_file is set.
+
 2011-01-26  Dave Korn  <dave.korn.cygwin@gmail.com>
 
 	PR c++/43601
